# arancini-exploration

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  aarch64-toolchain-nix.cmake  aarch64-toolchain.cmake  aarch64.lds  aarch64.lib.lds  arm64.lds.new  exec.lds  flake.nix  go.sh  gogogo.sh  guest-sections.lds  hist-nopt-arm.out  hist-opt-arm.out  init_lib.c  lib.lds  llvm.nix  mbuild-riscv.patch  riscv64-toolchain-nix.cmake  riscv64-toolchain.cmake  shell.nix  test-indiv.sh  tmp.ll.bak  tree.sh  xed-riscv.patch
.github/workflows/: build.yml  format.yml  nix.yml
cmake/: XEDConfig.cmake.in  fadec.cmake  fmt.cmake  getKeystone.cmake  getXED.cmake  utils.cmake  wrapper.sh  xed.cmake
cmake/patches/: mbuild-riscv.patch
docs/: HowToTranslateX86Instructions.md  TODO.md  build.md  format.md  linker_script.md  logging.md
inc/arancini/elf/: elf-reader.h
inc/arancini/input/: input-arch.h  registers.h
inc/arancini/input/x86/: reg.def  x86-input-arch.h  x86-internal-functions.h
inc/arancini/ir/: allocator.h  block.h  builder.h  chunk.h  debug-visitor.h  default-ir-builder.h  default-visitor.h  dot-graph-generator.h  internal-function-resolver.h  ir-builder.h  metadata.h  node.h  opt.h  packet.h  port.h  value-type.h  visitor.h
inc/arancini/native_lib/: idl-ast-node.h  native-lib-idl.h  native-lib.h  nlib_func.h
inc/arancini/output/: host-arch.h  output-engine.h  output-personality.h
inc/arancini/output/arm64/: arm64-output-engine-impl.h  arm64-output-engine.h
inc/arancini/output/debug/: dot-graph-output.h
inc/arancini/output/dynamic/: chain.h  dynamic-output-engine.h  machine-code-allocator.h  machine-code-writer.h  translation-context.h
inc/arancini/output/llvm/: llvm-output-engine-impl.h  llvm-output-engine.h
inc/arancini/output/mc/: machine-code-allocator.h  machine-code-builder.h
inc/arancini/output/static/: static-output-engine.h
inc/arancini/output/x86/: x86-output-engine-impl.h  x86-output-engine.h
inc/arancini/txlat/: txlat-engine.h
inc/arancini/util/: CMakeLists.txt  logger.h  ordering.h  static-map.h  system-config.h  tempfile-manager.h  tempfile.h  type-utils.h
lib/: Makefile
scripts/: Untitled1.ipynb  bench.py  check-assembly.sh  conf.ini  conf.json  flake.nix  plot.ipynb  result-x86_64-linux.ccTest  result-x86_64-linux.packageTest  riscv-fpargs.patch  shell.nix  split_dot.py
scripts/linker_script/: gen_linker_script.sh  gphdr.inc  phdrs-to-lds.sh
scripts/mini-nix/: flake.nix
scripts/results/: parsec-phoenix.csv
src/core/: CMakeLists.txt  Makefile
src/core/elf/: elf-reader.cpp
src/core/input/: input-arch.cpp
src/core/util/: tempfile-manager.cpp
src/input/x86/: CMakeLists.txt  Makefile  x86-input-arch.cpp  x86-internal-functions.cpp
src/input/x86/translators/: atomic.cpp  binop.cpp  branch.cpp  cmov.cpp  control.cpp  fpu.cpp  fpvec.cpp  interrupt.cpp  io.cpp  jcc.cpp  mov.cpp  muldiv.cpp  nop.cpp  punpck.cpp  rep.cpp  setcc.cpp  shifts.cpp  shuffle.cpp  stack.cpp  translator.cpp  unimplemented.cpp  unop.cpp
src/ir/: CMakeLists.txt  Makefile  debug-visitor.cpp  default-ir-builder.cpp  dot-graph-generator.cpp  port.cpp
src/native_lib/: CMakeLists.txt  native-lib-idl.cpp  native-lib-idl.l  native-lib-idl.y  native-lib.cpp
src/output/arm64/: Makefile  arm64-output-engine.cpp
src/output/debug/: Makefile  dot-graph-output.cpp
src/output/dynamic/arm64/: CMakeLists.txt  arm64-assembler.cpp  arm64-dynamic-output-engine.cpp  arm64-instruction-builder.cpp  arm64-instruction.cpp  arm64-register-allocator.cpp  arm64-translation-context.cpp
src/output/dynamic/arm64/cmake/: getKeystone.cmake
src/output/dynamic/riscv/: CMakeLists.txt  Makefile  riscv-dynamic-output-engine.cpp  riscv-translation-context.cpp
src/output/dynamic/riscv64/: CMakeLists.txt  riscv64-dynamic-output-engine.cpp  riscv64-translation-context.cpp
src/output/dynamic/riscv64/encoder/: assert.cpp  riscv64-assembler.cpp
src/output/dynamic/riscv64/machineCode/: assembler_riscv.cpp  assert.cpp
src/output/dynamic/x86/: CMakeLists.txt  Makefile  machine-code-builder.cpp  x86-dynamic-output-engine.cpp  x86-instruction-builder.cpp  x86-instruction.cpp  x86-lowering-visitor.cpp  x86-translation-context.cpp
src/output/llvm/: Makefile  llvm-output-engine.cpp
src/output/static/llvm/: CMakeLists.txt  Makefile  llvm-fence-combine.cpp  llvm-optimisations.cpp  llvm-static-output-engine.cpp
src/output/static/llvm/Passes/: RegArgPromotionPass.cpp
src/output/x86/: Makefile  x86-output-engine.cpp
src/runtime/: CMakeLists.txt  Makefile  entry.cpp
src/runtime/dbt/: trampoline.arm64.S  trampoline.riscv64.S  trampoline.x86_64.S  translation-engine.cpp
src/runtime/exec/: execution-context.cpp  execution-thread.cpp
src/runtime/exec/x86/: x86-cpu-state.cpp
src/txlat/: CMakeLists.txt  Makefile  main.cpp  txlat-engine.cpp
src/util/: CMakeLists.txt  system-config.cpp
test/: CMakeLists.txt  Makefile  collatz.c  hello  individual.S  translate-and-run.py
test/examples/: CMakeLists.txt  Makefile  fib.c  matmul.c
test/hello-world/: Makefile  hello-static-musl  hello-static-musl.dynamic.json  hello-static-musl.hybrid.json
test/kernels/: CMakeLists.txt
test/kernels/avx/: Makefile  addepi16.c  addepi32.c  addepi64.c  addepi8.c  addpd.c  addps.c  divpd.c  divps.c  mulpd.c  mulps.c  set1pd.c  set1ps.c  sqrtpd.c  sqrtps.c  subpd.c  subps.c
test/kernels/binop/: Makefile  add.c  muldiv.c  or.c  pxor.c
test/kernels/fp/: Makefile  addsd.c  addss.c  convert.c  divsd.c  divss.c  divss_avx.c  divss_mask.c  divss_sse.c  mulsd.c  mulss.c  subsd.c  subss.c
test/kernels/sse/: Makefile  addepi16.c  addepi32.c  addepi64.c  addepi8.c  addpd.c  addps.c  divpd.c  divps.c  mulpd.c  mulps.c  padd.c  paddd.c  set1pd.c  set1ps.c  setpd.c  setps.c  sqrtpd.c  sqrtps.c  subepi16.c  subepi32.c  subepi64.c  subepi8.c  subpd.c  subps.c  unpack.c
test/phoenix/: histogram  histogram-static-musl  kmeans-static-musl  linear_regression-static-musl
test/qsort/: CMakeLists.txt  Makefile  qsort.c
(+67 files in other folders)
